@@ -3,6 +3,7 @@ Unreleased
 Changed
     Add up to 5 second delay opening operation sockets to prevent browser weirdness
     Add more error checking to migrate instance to prevent accidental deletions
+    Make dashboard graphs bigger & show percentage change over period
 
 Fixed
     Disconnecting from VGA terminal could cause node crash (#498)
